--- a/fieldsofsalt.csproj
+++ b/fieldsofsalt.csproj
@@ -84,19 +84,23 @@
     <Compile Include="src\Blocks\BlockConnector.cs" />
     <Compile Include="src\Blocks\Entities\BlockEntityPond.cs" />
     <Compile Include="src\Blocks\Entities\BlockEntitySource.cs" />
-    <Compile Include="src\Blocks\IMultiblockPartBlock.cs" />
-    <Compile Include="src\Blocks\IMultiblockPhantomBlock.cs" />
+    <Compile Include="src\Blocks\IMultiblockRenderMain.cs" />
+    <Compile Include="src\Multiblock\BlockMultiblockMain.cs" />
+    <Compile Include="src\Multiblock\BlockMultiblockSurrogate.cs" />
+    <Compile Include="src\Multiblock\IMultiblockPartBlock.cs" />
+    <Compile Include="src\Multiblock\IMultiblockPhantomBlock.cs" />
     <Compile Include="src\Blocks\ILiquidChannel.cs" />
     <Compile Include="src\Blocks\ILiquidSinkConnector.cs" />
     <Compile Include="src\Blocks\ILiquidSink.cs" />
     <Compile Include="src\Blocks\ILiquidConnectable.cs" />
-    <Compile Include="src\Blocks\IMultiblockMainBlock.cs" />
+    <Compile Include="src\Multiblock\IMultiblockMainBlock.cs" />
     <Compile Include="src\FieldsOfSaltMod.cs" />
     <Compile Include="src\HandbookPatcher\HandbookItemInfoEvent.cs" />
     <Compile Include="src\HandbookPatcher\HandbookItemInfoPatch.cs" />
     <Compile Include="src\HandbookPatcher\HandbookItemInfoSection.cs" />
     <Compile Include="src\Handbook\EvaporationInfo.cs" />
     <Compile Include="src\Items\ItemPondTemplate.cs" />
+    <Compile Include="src\Multiblock\MultiblockManager.cs" />
     <Compile Include="src\Recipes\EvaporationRecipe.cs" />
     <Compile Include="src\Renderer\TemplateAreaRenderer.cs" />
     <Compile Include="src\Utils\BitPack.cs" />
