--- a/fieldsofsalt.csproj
+++ b/fieldsofsalt.csproj
@@ -1,121 +1,62 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5090CABC-EB7D-4FE3-AD6F-39ABF9F0AF7E}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FieldsOfSalt</RootNamespace>
-    <AssemblyName>fieldsofsalt</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>$(ProjectDir)\bin</OutputPath>
-    <IntermediateOutputPath>..\..\obj\Debug\fieldsofsalt\</IntermediateOutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>$(ProjectDir)\bin</OutputPath>
-    <IntermediateOutputPath>..\..\obj\Release\fieldsofsalt\</IntermediateOutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="0Harmony">
-      <HintPath>..\..\..\Games\Vintagestory18\Lib\0Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="cairo-sharp">
-      <HintPath>..\..\..\Games\Vintagestory18\Lib\cairo-sharp.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="VintagestoryAPI">
-      <HintPath>C:\Games\Vintagestory18\VintagestoryAPI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VintagestoryLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Games\Vintagestory18\VintagestoryLib.dll</HintPath>
-    </Reference>
-    <Reference Include="VSSurvivalMod">
-      <HintPath>C:\Games\Vintagestory18\Mods\VSSurvivalMod.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VSEssentials">
-      <HintPath>C:\Games\Vintagestory18\Mods\VSEssentials.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VSCreativeMod">
-      <HintPath>C:\Games\Vintagestory18\Mods\VSCreativeMod.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Games\Vintagestory18\Lib\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="modinfo.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="src\Blocks\BlockChannel.cs" />
-    <Compile Include="src\Blocks\BlockPond.cs" />
-    <Compile Include="src\Blocks\BlockRenderSurrogate.cs" />
-    <Compile Include="src\Blocks\BlockSource.cs" />
-    <Compile Include="src\Blocks\BlockConnector.cs" />
-    <Compile Include="src\Blocks\Entities\BlockEntityPond.cs" />
-    <Compile Include="src\Blocks\Entities\BlockEntitySource.cs" />
-    <Compile Include="src\Blocks\IMultiblockRenderMain.cs" />
-    <Compile Include="src\Multiblock\BlockMultiblockMain.cs" />
-    <Compile Include="src\Multiblock\BlockMultiblockSurrogate.cs" />
-    <Compile Include="src\Multiblock\IMultiblockPartBlock.cs" />
-    <Compile Include="src\Multiblock\IMultiblockPhantomBlock.cs" />
-    <Compile Include="src\Blocks\ILiquidChannel.cs" />
-    <Compile Include="src\Blocks\ILiquidSinkConnector.cs" />
-    <Compile Include="src\Blocks\ILiquidSink.cs" />
-    <Compile Include="src\Blocks\ILiquidConnectable.cs" />
-    <Compile Include="src\Multiblock\IMultiblockMainBlock.cs" />
-    <Compile Include="src\FieldsOfSaltMod.cs" />
-    <Compile Include="src\HandbookPatcher\HandbookItemInfoEvent.cs" />
-    <Compile Include="src\HandbookPatcher\HandbookItemInfoPatch.cs" />
-    <Compile Include="src\HandbookPatcher\HandbookItemInfoSection.cs" />
-    <Compile Include="src\Handbook\EvaporationInfo.cs" />
-    <Compile Include="src\Items\ItemPondTemplate.cs" />
-    <Compile Include="src\Multiblock\MultiblockManager.cs" />
-    <Compile Include="src\Recipes\EvaporationRecipe.cs" />
-    <Compile Include="src\Renderer\TemplateAreaRenderer.cs" />
-    <Compile Include="src\Utils\BitPack.cs" />
-    <Compile Include="src\Utils\GraphicUtil.cs" />
-    <Compile Include="src\Utils\SerializationUtils.cs" />
-    <Compile Include="src\Utils\TreeAttributeUtils.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="assets\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-copy "$(TargetPath)" "$(ProjectDir)" 
-copy "$(TargetDir)\$(TargetName).pdb" "$(ProjectDir)" 
-    </PostBuildEvent>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<OutputType>Library</OutputType>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<OutputPath>$(ProjectDir)\bin</OutputPath>
+		<IntermediateOutputPath>..\..\obj\Debug\fieldsofsalt\</IntermediateOutputPath>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+		<OutputPath>$(ProjectDir)\bin</OutputPath>
+		<IntermediateOutputPath>..\..\obj\Release\fieldsofsalt\</IntermediateOutputPath>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+	<ItemGroup>
+		<Reference Include="0Harmony">
+			<HintPath>..\..\..\Games\Vintagestory18.NET7\Lib\0Harmony.dll</HintPath>
+		</Reference>
+		<Reference Include="cairo-sharp">
+			<HintPath>..\..\..\Games\Vintagestory18.NET7\Lib\cairo-sharp.dll</HintPath>
+		</Reference>
+		<Reference Include="VintagestoryAPI">
+			<HintPath>C:\Games\Vintagestory18.NET7\VintagestoryAPI.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="VintagestoryLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+			<SpecificVersion>False</SpecificVersion>
+			<HintPath>..\..\..\Games\Vintagestory18.NET7\VintagestoryLib.dll</HintPath>
+		</Reference>
+		<Reference Include="VSSurvivalMod">
+			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSSurvivalMod.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="VSEssentials">
+			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSEssentials.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="VSCreativeMod">
+			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSCreativeMod.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="Newtonsoft.Json">
+			<HintPath>C:\Games\Vintagestory18.NET7\Lib\Newtonsoft.Json.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="modinfo.json" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="assets\" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+	</ItemGroup>
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(ProjectDir)&quot;" />
+	</Target>
 </Project>
