--- a/fieldsofsalt.csproj
+++ b/fieldsofsalt.csproj
@@ -16,33 +16,35 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<Reference Include="0Harmony">
-			<HintPath>..\..\..\Games\Vintagestory18.NET7\Lib\0Harmony.dll</HintPath>
-		</Reference>
-		<Reference Include="cairo-sharp">
-			<HintPath>..\..\..\Games\Vintagestory18.NET7\Lib\cairo-sharp.dll</HintPath>
-		</Reference>
-		<Reference Include="VintagestoryAPI">
-			<HintPath>C:\Games\Vintagestory18.NET7\VintagestoryAPI.dll</HintPath>
+			<HintPath>C:\Games\Vintagestory19\Lib\0Harmony.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="VintagestoryLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-			<SpecificVersion>False</SpecificVersion>
-			<HintPath>..\..\..\Games\Vintagestory18.NET7\VintagestoryLib.dll</HintPath>
+		<Reference Include="cairo-sharp">
+			<HintPath>C:\Games\Vintagestory19\Lib\cairo-sharp.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="VintagestoryAPI">
+			<HintPath>C:\Games\Vintagestory19\VintagestoryAPI.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="VintagestoryLib">
+			<HintPath>C:\Games\Vintagestory19\VintagestoryLib.dll</HintPath>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSSurvivalMod">
-			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSSurvivalMod.dll</HintPath>
+			<HintPath>C:\Games\Vintagestory19\Mods\VSSurvivalMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSEssentials">
-			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSEssentials.dll</HintPath>
+			<HintPath>C:\Games\Vintagestory19\Mods\VSEssentials.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSCreativeMod">
-			<HintPath>C:\Games\Vintagestory18.NET7\Mods\VSCreativeMod.dll</HintPath>
+			<HintPath>C:\Games\Vintagestory19\Mods\VSCreativeMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
-			<HintPath>C:\Games\Vintagestory18.NET7\Lib\Newtonsoft.Json.dll</HintPath>
+			<HintPath>C:\Games\Vintagestory19\Lib\Newtonsoft.Json.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
@@ -57,6 +59,6 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-	  <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(ProjectDir)&quot;" />
+		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(ProjectDir)&quot;" />
 	</Target>
 </Project>
