--- a/fieldsofsalt.csproj
+++ b/fieldsofsalt.csproj
@@ -5,12 +5,12 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<OutputPath>$(ProjectDir)\bin</OutputPath>
+		<OutputPath>$(MSBuildProjectDirectory)\bin</OutputPath>
 		<IntermediateOutputPath>..\..\obj\Debug\fieldsofsalt\</IntermediateOutputPath>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<OutputPath>$(ProjectDir)\bin</OutputPath>
+		<OutputPath>$(MSBuildProjectDirectory)\bin</OutputPath>
 		<IntermediateOutputPath>..\..\obj\Release\fieldsofsalt\</IntermediateOutputPath>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
@@ -59,6 +59,6 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(ProjectDir)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(ProjectDir)&quot;" />
+		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(MSBuildProjectDirectory)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(MSBuildProjectDirectory)&quot;" />
 	</Target>
 </Project>
