gitattributes & update to 1.20 & channels fix

--- a/fieldsofsalt.csproj
+++ b/fieldsofsalt.csproj
@@ -16,35 +16,35 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<Reference Include="0Harmony">
-			<HintPath>C:\Games\Vintagestory19\Lib\0Harmony.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Lib/0Harmony.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="cairo-sharp">
-			<HintPath>C:\Games\Vintagestory19\Lib\cairo-sharp.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Lib/cairo-sharp.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VintagestoryAPI">
-			<HintPath>C:\Games\Vintagestory19\VintagestoryAPI.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VintagestoryLib">
-			<HintPath>C:\Games\Vintagestory19\VintagestoryLib.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/VintagestoryLib.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSSurvivalMod">
-			<HintPath>C:\Games\Vintagestory19\Mods\VSSurvivalMod.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSEssentials">
-			<HintPath>C:\Games\Vintagestory19\Mods\VSEssentials.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Mods/VSEssentials.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="VSCreativeMod">
-			<HintPath>C:\Games\Vintagestory19\Mods\VSCreativeMod.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Mods/VSCreativeMod.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
-			<HintPath>C:\Games\Vintagestory19\Lib\Newtonsoft.Json.dll</HintPath>
+			<HintPath>$(VINTAGE_STORY)/Lib/Newtonsoft.Json.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
@@ -59,6 +59,6 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(MSBuildProjectDirectory)&quot;&#xD;&#xA;copy &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(MSBuildProjectDirectory)&quot;" />
+		<Exec Command="cp &quot;$(TargetPath)&quot; &quot;$(MSBuildProjectDirectory)&quot;&#xD;&#xA;cp &quot;$(TargetDir)\$(TargetName).pdb&quot; &quot;$(MSBuildProjectDirectory)&quot;" />
 	</Target>
 </Project>
